--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,5 +9,12 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
+ *= require normalize-rails
+ *= require_tree
+ *= require style
+ *= require_header .
  */
+
+@import "bourbon";
+@import "neat";
+@import "flat-ui";
