--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,17 +5,17 @@
       = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
         = devise_error_messages!
         %div
-          = f.label :email
-          %br/
-          = f.email_field :email, :autofocus => true
+          // = f.label :email
+          // %br/
+          = f.email_field :email, :autofocus => true, :placeholder => "Email"
         %div
-          = f.label :password
-          %br/
-          = f.password_field :password
+          // = f.label :password
+          // %br/
+          = f.password_field :password, :placeholder => "Password"
         %div
-          = f.label :password_confirmation
-          %br/
-          = f.password_field :password_confirmation
+          // = f.label :password_confirmation
+          // %br/
+          = f.password_field :password_confirmation, :placeholder => "Confirm Password"
         %div
           = f.submit "Sign up", :class => "btn btn-primary btn-wide"
       = render "devise/shared/links"
