--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -85,5 +85,4 @@
   <%= @profile.url_website %>
 </p>
 
-<%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Edit', edit_profile_path(@profile) %>
